feat: first working version

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,10 +19,11 @@ params {
     input                   = null
 
     // Parameters with defaults
-    outdir                  = 'gffctx_results'
     kw_gene_feature         = 'gene'
     kw_transcript_feature   = 'mRNA'
     kw_exon_feature         = 'exon'
+    outdir                  = 'gffctx_results'
+    overlap_percent         = 0.50
 
 
     // Options
